--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ document.oncontextmenu =new Function("return false;")
 document.onselectstart =new Function("return false;")
 </script>
 <header>
-		<span style="cursor: pointer;">Flcy-gen</span>
+		<span style="cursor: pointer;">AMBRDROID ACCOUNTS</span>
 	</header>
 <style>
 	header { margin-top: 40px; position: absolute; float: left; font-size: 24px; font-weight: bold; }
@@ -28,11 +28,11 @@ document.onselectstart =new Function("return false;")
 	<nav>
 		<ul>
 			
-			<li><a href="fortnite/index.html">Fortnite</a></li>
-			<li><a href="origin/index.html">Origin</a></li>
-			<li><a href="hulu/index.html">Hulu</a></li>
-			<li><a href="nordvpn/index.html">Nordvpn</a></li>
-			<li><a href="premium/index.html">Premium Generator</a></li>
+			<li><a href="">Fortnite</a></li>
+			<li><a href="">Origin</a></li>
+			<li><a href="">Hulu</a></li>
+			<li><a href="">Nordvpn</a></li>
+			<li><a href="">Premium Generator</a></li>
 		</ul>
 		</nav>
 		<section>
