--- a/fortnite/index.html
+++ b/fortnite/index.html
@@ -27,12 +27,12 @@ document.onselectstart =new Function("return false;")
 </style>
 	<nav>
 		<ul>
-			<li><a href="https://discord.gg/Q9rJhyK">Discord</a></li>
-			<li><a href="../index.html">Minecraft</a></li>
-			<li><a href="../origin/index.html">Origin</a></li>
-			<li><a href="../hulu/index.html">Hulu</a></li>
-			<li><a href="../nordvpn/index.html">Nordvpn</a></li>
-			<li><a href="../premium/index.html">Premium Generator</a></li>
+			
+			<li><a href="">Minecraft</a></li>
+			<li><a href="">Origin</a></li>
+			<li><a href="">Hulu</a></li>
+			<li><a href="">Nordvpn</a></li>
+			<li><a href="">Premium Generator</a></li>
 		</ul>
 		</nav>
 		<section>
